--- a/app/globals.css
+++ b/app/globals.css
@@ -33,18 +33,39 @@
   }
 }
 
+
+
+html {
+  font-family: 'Press Start 2P', serif;
+  height: 100%; /* Make sure the body and html take up full height */
+  margin: 0;
+  overflow: hidden; /* Disable scrolling */
+}
+
 * {
   box-sizing: border-box;
 }
 
-html {
-  font-family: 'Press Start 2P', serif;
+.fixed {
+  position: fixed;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 body {
   color: var(--foreground);
   background: linear-gradient(to bottom, transparent, var(--background))
-    var(--background);
+  var(--background);
   margin: 0;
   --muted-text-rgb: 176, 176, 176;
   --highlight-gradient: linear-gradient(
@@ -72,7 +93,7 @@ a {
   height: 320px;
   top: 0;
   left: 0;
-  z-index: -1;
+  z-index: 10;
 }
 
 .not-found,
@@ -158,6 +179,15 @@ a {
   );
   pointer-events: none;
   z-index: 1;
+  opacity: 0; /* Start as invisible */
+  transition: opacity 1s ease;
+}
+
+
+
+/* Add an active state for the intro */
+.fade-mask.active {
+  opacity: 1; /* Only visible during intro */
 }
 
 
