--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Ubuntu:wght@300;400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
